<resources>
    <string name="app_name">Smart Meter</string>

    <string name="user_login">User Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">Login</string>
    <string name="not_have_an_account_signup_here">Sign Up</string>

    <string name="user_registration">User Registration</string>
    <string name="signup">Signup</string>
    <string name="already_registered_signin_here">Already Registered? Login Here</string>
    <string name="forgot_password">forgot password?</string>
    <string name="separate">|</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="logout">LOGOUT</string>
    <string name="details">DETAILS</string>
    <string name="action_settings">SETTINGS</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">USAGE</string>
    <string name="tab_text_2">BILLING</string>
    <string name="tab_text_3">NOTIFICATION</string>

</resources>
